--- a/src/extlibs/spglib/Makefile
+++ b/src/extlibs/spglib/Makefile
@@ -11,7 +11,8 @@ C_SRC = \
 arithmetic.c  determination.c  mathfunc.c    primitive.c         spacegroup.c    spin.c \
 cell.c        hall_symbol.c    niggli.c      refinement.c        spg_database.c  symmetry.c \
 debug.c       kgrid.c          overlap.c     sitesym_database.c  spglib.c        test.c \
-delaunay.c    kpoint.c         pointgroup.c  site_symmetry.c     spglib_f.c      tetrahedron_method.c
+delaunay.c    kpoint.c         pointgroup.c  site_symmetry.c     spglib_f.c      tetrahedron_method.c \
+my_subs.c
 
 OBJ = $(C_SRC:.c=.o) 
 
