--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,7 @@ version = "0.2.0"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
-Libxc = "66e17ffc-8502-11e9-23b5-c9248d0eb96d"
+Libxc_jll = "a56a6d9d-ad03-58af-ab61-878bf78270d6"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
